<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvNomorSoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtNomorSoal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvJudulSoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNomorSoal" />

        <TextView
            android:id="@+id/tvPilihanA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPilihanA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJudulSoal" />

        <TextView
            android:id="@+id/tvPilihanB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPilihanB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPilihanA" />

        <TextView
            android:id="@+id/tvPilihanC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPilihanC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPilihanB" />

        <TextView
            android:id="@+id/tvPilihanD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPilihanD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPilihanC" />

        <TextView
            android:id="@+id/tvPilihanE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPilihanE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPilihanD" />

        <TextView
            android:id="@+id/tvJawaban"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtKunciJawaban"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPilihanE" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>